--- a/_includes/05_collaboration.html
+++ b/_includes/05_collaboration.html
@@ -7,7 +7,7 @@
                 particular,
                 thank you to the following individuals for inspiring me (in no particular order):
                 <br>
-                <a target="_blank" href="https://www.santafe.edu/people/profile/alessandro-palmarini">alessandro
+                <a target="_blank" href="https://scholar.google.com/citations?user=gxB8nYQAAAAJ">alessandro
                     palmarini</a>
                 <br>
                 <a target="_blank" href="https://simon-yu.netlify.app/">simon yu</a>
