--- a/_includes/01_research.html
+++ b/_includes/01_research.html
@@ -67,6 +67,14 @@
                         });
                     }
                 },
+                {
+                    text: '🔖 position',
+                    action: function (e, dt, node, config) {
+                        $(".dataTables_wrapper input").val(function () {
+                            return this.value + "🔖";
+                        });
+                    }
+                },
             ]
         });
     });
@@ -92,12 +100,23 @@
     </thead>
     <tbody>
         <tr>
-            <td class="center">2024</td>
-            <td>Panza: A personal email assistant, trained and running on-device
+            <td class="center">2025</td>
+            <td>Position: It's Time to Act on the Risk of Efficient Personalized Text Generation
             </td>
-            <td>alistarh, iofinova, jovanović, kurtic, markov, nicolicioiu, nikdan, panferov, shavit, yang.</td>
+            <td> iofinova, jovanović, alistarh,</td>
+            <td class="med">🔖</td>
+            <td class="center"><a target="_blank" href="https://arxiv.org/abs/2502.06560">arxiv</a></td>
+            <td class="big"></td>
+            <td class="med">
+            </td>
+        </tr>
+        <tr>
+            <td class="center">2025</td>
+            <td>Panza: Design and Analysis of a Fully-Local Personalized Text Writing Assistant
+            </td>
+            <td>nicolicioiu, iofinova, jovanović, kurtic, nikdan, panferov, markov, shavit, alistarh</td>
             <td class="med">💻🗣️🌀</td>
-            <td class="center"><a target="_blank" href="https://arxiv.org/pdf/2407.10994">arxiv</a></td>
+            <td class="center"><a target="_blank" href="https://arxiv.org/abs/2407.10994">arxiv</a></td>
             <td class="big"><a target="_blank" href="https://github.com/IST-DASLab/PanzaMail"><i
                         class="fa fa-github fa-fw"></i></a>
             <td class="med">
