--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -38,8 +38,10 @@
                         </ul>
                         <br>
                         <p class="intro-text">
-                            budding machine learning researcher;
-                            member of the <a target="_blank" href="https://cohere.for.ai/"> cohere for ai</a> community.
+                            ML Research @ ISTA;
+                            <br>
+                            community lead: ml-theory @ <a target="_blank" href="https://cohere.for.ai/"> cohere for
+                                ai</a>.
 
                         </p>
 
