--- a/_includes/01_research.html
+++ b/_includes/01_research.html
@@ -116,7 +116,8 @@
             </td>
             <td>nicolicioiu, iofinova, jovanović, kurtic, nikdan, panferov, markov, shavit, alistarh</td>
             <td class="med">💻🗣️🌀</td>
-            <td class="center"><a target="_blank" href="https://arxiv.org/abs/2407.10994">arxiv</a></td>
+            <td class="center"><a target="_blank" href="https://openreview.net/forum?id=gsr3t360Xy">ICLR 2025 Workshop
+                    on Foundation Models in the Wild</a></td>
             <td class="big"><a target="_blank" href="https://github.com/IST-DASLab/PanzaMail"><i
                         class="fa fa-github fa-fw"></i></a>
             <td class="med">
