--- a/_includes/01_research.html
+++ b/_includes/01_research.html
@@ -75,6 +75,14 @@
                         });
                     }
                 },
+                {
+                    text: '📈 optimisation',
+                    action: function (e, dt, node, config) {
+                        $(".dataTables_wrapper input").val(function () {
+                            return this.value + "📈";
+                        });
+                    }
+                },
             ]
         });
     });
@@ -122,6 +130,20 @@
                         class="fa fa-github fa-fw"></i></a>
             <td class="med">
                 <a target="_blank" href="https://www.youtube.com/watch?v=Yn96riyPx2k&t=28s"><i></i>bonus video</a>
+            </td>
+        </tr>
+        <tr>
+            <td class="center">2024</td>
+            <td>Second-Order Optimisation and Imbalanced Class Distribution in Emotional Analysis
+            </td>
+            <td>jovanović</td>
+            <td class="med">🌀📈</td>
+            <td class="center"><a target="_blank"
+                    href="https://www.mlmi.eng.cam.ac.uk/files/2023-2024/jovanovic_second-order_2024.pdf">MPhil Thesis @
+                    Cambridge</a></td>
+            <td class="big"><a></a>
+            <td class="med">
+                <a></a>
             </td>
         </tr>
         <tr>
