--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -38,10 +38,10 @@
                         </ul>
                         <br>
                         <p class="intro-text">
-                            ML Research @ ISTA;
+                            ML Research @ University of Cambridge & Flower Labs;
                             <br>
-                            community lead: ml-theory @ <a target="_blank" href="https://cohere.for.ai/"> cohere for
-                                ai</a>.
+                            community lead: ml-theory @ <a target="_blank" href="https://cohere.com/research"> cohere
+                                labs</a>.
 
                         </p>
 
