--- a/_includes/01_research.html
+++ b/_includes/01_research.html
@@ -7,8 +7,8 @@
                 <em>privacy-preserving</em>, <em>efficient</em>
                 and <em>collaborative</em> machine learning.
                 In particular, I have a great affinity towards paradigms such as <em>federated learning</em> and
-                <em>neural network compression</em>,
-                branching off into areas such as <em>mechanistic interpretability</em>. Generally speaking, the
+                <em>neural network compression</em>, and the interplay this has with optimisation theory. Generally
+                speaking, the
                 motivating factor for this is that
                 I am circumspect towards the promise of centralised machine learning paradigms, which require enormous
                 amounts of data and
@@ -18,8 +18,7 @@
                 supported by sound
                 mathematical foundations.
                 <br><br>
-                I am actively looking for PhD opportunities to start in 2025 Spring/Autumn. If you know of any
-                vacancies,
+                If you find any of my research interesting, or you would like to collaborate on any ideas,
                 please do not hesitate to reach out.
 
             </p>
@@ -107,6 +106,17 @@
         </tr>
     </thead>
     <tbody>
+        <tr>
+            <td class="center">2025</td>
+            <td>DES-LOC: Desynced Low Communication Adaptive Optimizers for Training Foundation Models
+            </td>
+            <td> iacob, sani, safaryan, giampouras, horváth, jovanović, kurmanji, aleksandrov, shen, qiu, lane</td>
+            <td class="med">🌳📈</td>
+            <td class="center"><a target="_blank" href="https://arxiv.org/abs/2505.22549">arxiv</a></td>
+            <td class="big"></td>
+            <td class="med">
+            </td>
+        </tr>
         <tr>
             <td class="center">2025</td>
             <td>Position: It's Time to Act on the Risk of Efficient Personalized Text Generation
