--- a/_includes/04_education.html
+++ b/_includes/04_education.html
@@ -7,6 +7,24 @@
         </div>
         <div class="timeline-panel">
             <div class="timeline-heading">
+                <p>October 2025 - Present</p>
+                <h4 class="subheading">the university of cambridge</h4>
+            </div>
+            <div class="timeline-body">
+                <p>
+                    <a target="_blank" href="https://www.cst.cam.ac.uk/">(phd) computer science</a> specialising
+                    in federated (pre)training of large language models with, advised by <a target="_blank"
+                        href="https://mlsys.cst.cam.ac.uk/">Nic Lane in the CaMLSys group</a>.
+                </p>
+            </div>
+        </div>
+    </li>
+    <li>
+        <div class="timeline-image">
+            <img class="img-circle img-responsive" src="{{ site.baseurl }}/assets/img/cambridge.png" alt="">
+        </div>
+        <div class="timeline-panel">
+            <div class="timeline-heading">
                 <p>October 2023 - August 2024</p>
                 <h4 class="subheading">the university of cambridge</h4>
             </div>
