--- a/_includes/03_experience.html
+++ b/_includes/03_experience.html
@@ -3,20 +3,40 @@
 <ul class="timeline">
     <li>
         <div class="timeline-image">
+            <img class="img-circle" src="{{ site.baseurl }}/assets/img/camlsys-flower.png" alt=""
+                style="border-radius: 100%; width: 100%; height: 100%;">
+        </div>
+        <div class="timeline-panel">
+            <div class="timeline-heading">
+                <p>May 2025 - Oct 2025</p>
+                <h4 class="subheading">research assistant | <a target="_blank"
+                        href="https://mlsys.cst.cam.ac.uk/">camlsys</a> & <a target="_blank"
+                        href="https://flower.ai/research/">flower
+                        labs</a></h4>
+            </div>
+            <div class="timeline-body">
+                <p>Conducting research focusing on federated learning applied to the (pre)training of large scale
+                    models.
+                </p>
+            </div>
+        </div>
+    </li>
+    <li>
+        <div class="timeline-image">
             <img class="img-circle" src="{{ site.baseurl }}/assets/img/das_logo_blue.png" alt=""
                 style="border-radius: 85%; width: 100%; height: 100%;">
         </div>
         <div class="timeline-panel">
             <div class="timeline-heading">
                 <p>Oct 2024 - March 2025</p>
-                <h4 class="subheading">institute of science and technology austria <a target="_blank"
-                        href="https://ist.ac.at/en/research/alistarh-group/">Alistarh Group</a></h4>
+                <h4 class="subheading">research assistant | institute of science and technology austria <a
+                        target="_blank" href="https://ist.ac.at/en/research/alistarh-group/">Alistarh Group</a></h4>
             </div>
             <div class="timeline-body">
                 <p>Working as a research assistant under the supervision of <a target="_blank"
                         href="https://ist.ac.at/en/research/alistarh-group/">Dan Alistarh</a> in the Distributed
                     Algorithms and Systems (DAS)
-                    group focusing on federated learning applied to large scale models. </p>
+                    group focusing on compressed federated (pre)training of foundation models. </p>
             </div>
         </div>
     </li>
@@ -27,7 +47,7 @@
         <div class="timeline-panel">
             <div class="timeline-heading">
                 <p>Summer 2023 - Summer 2023</p>
-                <h4 class="subheading">jp morgan chase & co. <a target="_blank"
+                <h4 class="subheading"> app. ai research intern | jp morgan chase & co. <a target="_blank"
                         href="https://sjmoran.github.io/">(Applied
                         Innovation of
                         Artificial Intelligence (AI<sup>2</sup>))</a></h4>
@@ -46,7 +66,7 @@
         <div class="timeline-panel">
             <div class="timeline-heading">
                 <p>Summer 2022 - Summer 2022</p>
-                <h4 class="subheading">jp morgan chase & co. <a target="_blank"
+                <h4 class="subheading">ml eng intern | jp morgan chase & co. <a target="_blank"
                         href="https://sjmoran.github.io/">(Applied
                         Innovation of
                         Artificial Intelligence (AI<sup>2</sup>))</a></h4>
