--- a/_includes/02_notes_main.html
+++ b/_includes/02_notes_main.html
@@ -17,6 +17,10 @@
 <div class="coll3">
     <h3 align="center">presentations</h3>
     <ul class="list-items">
+        <li><a href="{{ site.baseurl }}/notes/cohere-federated-learning.html" style="font-size:medium">
+                communication-efficient training for
+                foundation models through federated learning. </a>
+        </li>
         <li><a href="{{ site.baseurl }}/notes/rditw.html" style="font-size:medium"> rumour
                 detection in the wild: a browser extension for twitter </a>
         </li>
