Add Cohere Labs spotlight

--- a/_includes/02_notes_main.html
+++ b/_includes/02_notes_main.html
@@ -49,6 +49,10 @@
 <div class="coll3">
     <h3 align="center">miscellaneous projects</h3>
     <ul class="list-items">
+        <li><a href="{{ site.baseurl }}/notes/ml-theory.html" style="font-size:medium"> community lead for ml theory at
+                cohere labs
+            </a>
+        </li>
         <li><a href="{{ site.baseurl }}/notes/recycled.html" style="font-size:medium"> resnet reverse recycling
                 machine
             </a>
